--- a/Starter_Code/climate_starter.ipynb
+++ b/Starter_Code/climate_starter.ipynb
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d5239cfa60>"
+       "<matplotlib.legend.Legend at 0x1e5b3335a20>"
       ]
      },
      "execution_count": 10,
